Project

General

Profile

Actions

Bug #10866

closed

A signal handler in signal.c can corrupt the value of errno.

Bug #10866: A signal handler in signal.c can corrupt the value of errno.

Added by sstewartgallus (Steven Stewart-Gallus) over 11 years ago. Updated over 11 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:68172]

Description

A signal handler in signal.c can corrupt the value of errno. This is
common mistake. It should save and restore errno as in the following
patch. I think this is the only signal handler used but I am not that
familiar with the code.

Index: signal.c

--- signal.c (revision 49641)
+++ signal.c (working copy)
@@ -688,11 +688,15 @@
static RETSIGTYPE
sighandler(int sig)
{

  • int old_errnum = errno;
  • signal_enque(sig);
    rb_thread_wakeup_timer_thread();
    #if !defined(BSD_SIGNAL) && !defined(POSIX_SIGNAL)
    ruby_signal(sig, sighandler);
    #endif
  • errno = old_errnum;
    }

int

Actions

Also available in: PDF Atom