signal.c: preserve errno

* signal.c (sighandler): preserve errno
  Patch by Steven Stewart-Gallus <sstewartgallus00@mylangara.bc.ca>
  [ruby-core:68172] [Bug #10866]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@49746 b2dd03c8-39d4-4d8f-98ff-823fe69b080e